main screen ready, need responsive

--- a/app/index.html
+++ b/app/index.html
@@ -3,19 +3,74 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Title</title>
-	<meta name="description" content="">
+	<title>Бугач - ремонтно-механическая мастерская</title>
+	<meta name="description" content="Ремонт грузовиков и спец. техники любой сложности. На все оказываемые услуги мы предоставляем Вам гарантию">
 
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;600;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.min.css">
 	
 </head>
 <body>
+	<div class="wrapper">
+		
 
-	<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Скатился что даль пунктуация снова агенство повстречался строчка толку города над своего дороге ведущими коварный дорогу то, ipsum своих грамматики.</p>
-	
-	<i class="fas fa-fish"></i>
+		<header class="header">
+			<div class="header__content">
+
+
+				<div class="top-line container">
+					<div class="top-line__left">
+						<div class="logo">
+							<img class="logo__img" src="img/main-logo.svg" alt="Бугач логотип">
+						</div>
+					</div>
+
+					<div class="top-line__right">
+						<div class="phone">
+							<i class="fas fa-mobile-alt phone__icon"></i>
+							<a class="phone__link" href="tel:+79083257905">+ 7 (908) <span class="accent">325-79-05</span></a>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="promo container">
+					<div class="promo__wrap">
+						<h1 class="promo__title">Ремонтно-механическая<br/>мастерская <span class="accent promo__title-company">Бугач</span></h1>
+						
+						<div class="promo__text"><span class="accent">Ремонт</span> грузовиков и спец. техники любой сложности. 
+							<br/>На все оказываемые услуги мы предоставляем
+							<br/>Вам <span class="accent">гарантию</span>
+						</div>
+
+						<div class="promo__btn-wrap">
+							<a href="#" class="promo__btn">Заказать звонок</a>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="head-cont">
+					<div class="head-cont__wrap container">
+						<div class="head-cont__item">
+							<a class="head-cont__link" href="#">
+								<i class="head-cont__icon fas fa-map-marker-alt"></i>
+								г. Красноярск, ул. Бийхемская 25
+							</a>
+						</div>
+						<div class="head-cont__item">
+							<i class="head-cont__icon fas fa-user-clock"></i>
+							Режим работы: пн-пт 9:00 - 18:00
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</header>
+
+
+	</div>
 	<script src="js/scripts.min.js"></script>
 
 </body>
