section services ready

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 	
 </head>
 <body>
-	<div class="wrapper">
+	<main class="wrapper">
 		
 
 		<header class="header">
@@ -70,7 +70,139 @@
 		</header>
 
 
-	</div>
+		<section class="sect-wrap services">
+			<div class="container">
+				<h2 class="sect-wrap__title">Наши <span class="accent">Услуги</span></h2>
+
+				<div class="serv-card">
+					<div class="row">
+
+						<div class="col-lg-3 serv-card__col">
+							<div class="serv-card__item">
+								<div class="serv-card__img" style="background-image: url(img/services/1-dvig.jpg);"></div>
+								<div class="serv-card__content">
+									<h3 class="serv-card__title">Ремонт <span class="accent">двигателей</span></h3>
+									<div class="serv-card__text">Ремонт двигателей всех типов и марок отечественного и иностранного производства с гарантией</div>
+									<div class="serv-card__price">
+										от
+										<span class="serv-card__price-num">20000</span>
+										<i class="fas fa-ruble-sign serv-card__icon"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-3 serv-card__col">
+							<div class="serv-card__item">
+								<div class="serv-card__img" style="background-image: url(img/services/2-trans.jpg);"></div>
+								<div class="serv-card__content">
+									<h3 class="serv-card__title">Ремонт <span class="accent">трансмиссии</span></h3>
+									<div class="serv-card__text">Ремонт механических и роботизированнных КПП, редукторов, ремонт агрегатов и узлов трансмиссии</div>
+									<div class="serv-card__price">
+										от
+										<span class="serv-card__price-num">5000</span>
+										<i class="fas fa-ruble-sign serv-card__icon"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-3 serv-card__col">
+							<div class="serv-card__item">
+								<div class="serv-card__img" style="background-image: url(img/services/3-podv.jpg);"></div>
+								<div class="serv-card__content">
+									<h3 class="serv-card__title">Обслуживание <span class="accent">подвески</span></h3>
+									<div class="serv-card__text">Ремонт ходовой части и подвески любой сложности</div>
+									<div class="serv-card__price">
+										от
+										<span class="serv-card__price-num">3000</span>
+										<i class="fas fa-ruble-sign serv-card__icon"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-3 serv-card__col">
+							<div class="serv-card__item">
+								<div class="serv-card__img" style="background-image: url(img/services/4-torm.jpg);"></div>
+								<div class="serv-card__content">
+									<h3 class="serv-card__title">Ремонт<br/><span class="accent">тормозной системы</span></h3>
+									<div class="serv-card__text">Ремонт тормозных систем различных видов, регулировка угла схождения колес </div>
+									<div class="serv-card__price">
+										от
+										<span class="serv-card__price-num">1500</span>
+										<i class="fas fa-ruble-sign serv-card__icon"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-3 serv-card__col">
+							<div class="serv-card__item">
+								<div class="serv-card__img" style="background-image: url(img/services/5-to.jpg);"></div>
+								<div class="serv-card__content">
+									<h3 class="serv-card__title">Техническое <span class="accent">обслуживание</span></h3>
+									<div class="serv-card__text">Проведение планового ТО согласно всем требованиям законодательства РФ</div>
+									<div class="serv-card__price">
+										от
+										<span class="serv-card__price-num">1500</span>
+										<i class="fas fa-ruble-sign serv-card__icon"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-3 serv-card__col">
+							<div class="serv-card__item">
+								<div class="serv-card__img" style="background-image: url(img/services/6-toks.jpg);"></div>
+								<div class="serv-card__content">
+									<h3 class="serv-card__title">Токарные и фрезерные <span class="accent">работы</span></h3>
+									<div class="serv-card__text">Изготовление шестерен, валов, втулок и других деталей. Работы любых сложностей</div>
+									<div class="serv-card__price">
+										от
+										<span class="serv-card__price-num">500</span>
+										<i class="fas fa-ruble-sign serv-card__icon"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-3 serv-card__col">
+							<div class="serv-card__item">
+								<div class="serv-card__img" style="background-image: url(img/services/7-speco.jpg);"></div>
+								<div class="serv-card__content">
+									<h3 class="serv-card__title">Ремонт оборудования <span class="accent">спец. техники</span></h3>
+									<div class="serv-card__text">Ремонт гидроцилиндров. Изготовление штоков гидроцилиндров</div>
+									<div class="serv-card__price">
+										от
+										<span class="serv-card__price-num">10000</span>
+										<i class="fas fa-ruble-sign serv-card__icon"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-3 serv-card__col">
+							<div class="serv-card__item">
+								<div class="serv-card__img" style="background-image: url(img/services/8-person.jpg);"></div>
+								<div class="serv-card__content">
+									<h3 class="serv-card__title">Разработка агрегатов и приспособлений по <span class="accent">заказу клиента</span></h3>
+									<div class="serv-card__text">Сварка конструкций и монтаж по чертежам заказчика, изготовление нестандартных инструментов, съемников и оправок</div>
+									<div class="serv-card__price serv-card__price_npr">
+										<span class="serv-card__price-num">индивидуально</span>
+										<i class="fas fa-ruble-sign serv-card__icon"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+	</main>
 	<script src="js/scripts.min.js"></script>
 
 </body>
