--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
 				<div class="serv-card">
 					<div class="row">
 
-						<div class="col-lg-3 serv-card__col">
+						<div class="col-lg-3 col-sm-6 serv-card__col">
 							<div class="serv-card__item">
 								<div class="serv-card__img" style="background-image: url(img/services/1-dvig.jpg);"></div>
 								<div class="serv-card__content">
@@ -92,7 +92,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-3 serv-card__col">
+						<div class="col-lg-3 col-sm-6 serv-card__col">
 							<div class="serv-card__item">
 								<div class="serv-card__img" style="background-image: url(img/services/2-trans.jpg);"></div>
 								<div class="serv-card__content">
@@ -107,7 +107,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-3 serv-card__col">
+						<div class="col-lg-3 col-sm-6 serv-card__col">
 							<div class="serv-card__item">
 								<div class="serv-card__img" style="background-image: url(img/services/3-podv.jpg);"></div>
 								<div class="serv-card__content">
@@ -122,7 +122,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-3 serv-card__col">
+						<div class="col-lg-3 col-sm-6 serv-card__col">
 							<div class="serv-card__item">
 								<div class="serv-card__img" style="background-image: url(img/services/4-torm.jpg);"></div>
 								<div class="serv-card__content">
@@ -137,7 +137,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-3 serv-card__col">
+						<div class="col-lg-3 col-sm-6 serv-card__col">
 							<div class="serv-card__item">
 								<div class="serv-card__img" style="background-image: url(img/services/5-to.jpg);"></div>
 								<div class="serv-card__content">
@@ -152,7 +152,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-3 serv-card__col">
+						<div class="col-lg-3 col-sm-6 serv-card__col">
 							<div class="serv-card__item">
 								<div class="serv-card__img" style="background-image: url(img/services/6-toks.jpg);"></div>
 								<div class="serv-card__content">
@@ -167,7 +167,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-3 serv-card__col">
+						<div class="col-lg-3 col-sm-6 serv-card__col">
 							<div class="serv-card__item">
 								<div class="serv-card__img" style="background-image: url(img/services/7-speco.jpg);"></div>
 								<div class="serv-card__content">
@@ -182,7 +182,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-3 serv-card__col">
+						<div class="col-lg-3 col-sm-6 serv-card__col">
 							<div class="serv-card__item">
 								<div class="serv-card__img" style="background-image: url(img/services/8-person.jpg);"></div>
 								<div class="serv-card__content">
@@ -310,7 +310,7 @@
 		// Yandex Map
 		ymaps.ready(function () {
 			var myMap = new ymaps.Map('ya-map', {
-					center: [56.05339750477862,92.7787498949697],
+					center: [56.054980, 92.770295],
 					zoom: 16,
 					controls: ['zoomControl', 'fullscreenControl']
 				}, {
